<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wunder Sync</string>
    <string name="action_settings">Settings</string>
    <string name="ui_sync_button_label_idle">Sync</string>
    <string name="ui_connected_label">Connect to Google Tasks</string>
    <string name="ui_connected_desc">Your account needs to be connected to Google Tasks</string>
    <string name="ui_enable_auto_sync_label">Auto Sync</string>
    <string name="ui_enable_auto_sync_desc">Whether to automatically sync or not.</string>
    <string name="ui_auto_backup_schedule_label">Regular schedule</string>
    <string name="ui_auto_backup_schedule_desc">When to Sync</string>
    <string name="ui_wifi_only_label">Require Wifi</string>
    <string name="ui_wifi_only_desc">Only sync when connected to Wifi</string>
    <string name="ui_settings_advanced_label">Advanced settings</string>
    <string name="ui_settings_advanced_desc">Set advanced preferences.</string>
    <string name="ui_auto_backup_settings_label">Sync Settings</string>
    <string name="_1h">1 h</string>
    <string name="_2h">2 h</string>
    <string name="_6h">6 h</string>
    <string name="_24h">24 h</string>
    <string name="never">Never</string>
    <string name="_1min">1 min</string>
    <string name="_3mins">3 mins</string>
    <string name="_30mins">30 mins</string>
    <string name="error_sync">Error during sync: No internet connection</string>
    <string name="gps_missing">Your phone seems to be missing Google Play Services. If it\'s a custom ROM make sure you have installed GApps package</string>
    <string name="accounts">Accounts</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <string name="connected_string" formatted="false">Connected as: %s</string>
    <string name="not_connected">Tap to connect your Gmail Account</string>
    <string name="additional_autosync_settings">Configure Additional Sync Settings</string>
    <string name="preferences_credentials">Connect to WunderList</string>
    <string name="preferences_credentials_desc">Since WunderList does not support OAuth yet, you need to provide credentials</string>
    <string name="wunderlist_cred_dialog">WunderList Credentials</string>
    <string name="wunderlist_username">Wunderlist UserName</string>
    <string name="wunderlist_password">Wunderlist Password</string>
	<string name="username">username</string>
	<string name="password">password</string>
	<string name="remember_credentials">Remember Credentials</string>
	<string name="state_login">Logging in</string>
	<string name="state_google_tasks">Fetching Google Tasks</string>
	<string name="state_wunder_tasks">Fetching Wunder Tasks</string>
	<string name="state_syncing" formatted="false">Syncing Tasks: %s/%s</string>
	<string name="state_error" formatted="false">Error occurred: %s</string>
	<string name="state_finished" formatted="false">Finished Sync</string>
	<string name="stop_sync" formatted="false">Stop Sync</string>
	<string name="sync" formatted="false">Sync</string>
	<string name="idle">Idle</string>
	<string name="error_empty_cred">You must provide both username/password to continue</string>
	<string name="missing_wunderlist_cred">You must set Wunderlist credentials to sync</string>
	<string name="missing_google_cred">You must connect your Google Account to sync</string>
	
	<string name="select_sync_list">Select lists to sync</string>
	<string name="select_sync_list_desc">Select lists to sync</string>
	<string name="error_refresh_internet">You must be connected to internet to refresh</string>
	<string name="start_sync_dialog">The app is now ready to sync. Do you want to sync now?</string>
	
	<string name="action_reset">Reset</string>
	<string name="action_about">About</string>
	<string name="action_viewlog">View log</string>
	
	<string name="sync_calendar_enabled_label">Calendar sync</string>
  <string name="sync_calendar_enabled_desc">Add WunderList Tasks to calendar</string>
  
  <string name="sync_calendar_label">None</string>
  <string name="sync_calendar_desc">Calendar used for WunderLists</string>
   <string name="app_log_empty">Log is empty. Enable it in \"Advanced settings\".</string>
</resources>