<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <in.co.madhur.wunderlistsync.StatusPreference   android:key="statusPreference" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="connected"
        android:persistent="true"
        android:summary="@string/ui_connected_desc"
        android:title="@string/ui_connected_label" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="enable_auto_sync"
        android:persistent="true"
        android:summary="@string/ui_enable_auto_sync_desc"
        android:title="@string/ui_enable_auto_sync_label" />

    <PreferenceScreen
        android:key="auto_backup_settings_screen"
        android:title="@string/ui_auto_backup_settings_label" android:summary="@string/additional_autosync_settings" >
        <ListPreference
            android:defaultValue="7200"
            android:entries="@array/auto_backup_schedule_entries"
            android:entryValues="@array/auto_backup_schedule_values"
            android:key="auto_backup_schedule"
            android:persistent="true"
            android:summary="@string/ui_auto_backup_schedule_desc"
            android:title="@string/ui_auto_backup_schedule_label" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="wifi_only"
            android:persistent="true"
            android:summary="@string/ui_wifi_only_desc"
            android:title="@string/ui_wifi_only_label" />
    </PreferenceScreen>

    
    <PreferenceScreen
        android:key="wunder_credentials"
        android:title="@string/preferences_credentials" android:summary="preferences_credentials_desc">
        
        <EditTextPreference android:key="wunderlist_username" android:dialogTitle="@string/wunderlist_password"  android:title="@string/wunderlist_username"></EditTextPreference>
        
        <EditTextPreference android:key="wunderlist_password" android:dialogTitle="@string/wunderlist_password" android:title="@string/wunderlist_password"></EditTextPreference>
        
   </PreferenceScreen>



</PreferenceScreen>